--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -759,6 +759,7 @@
                         event.setExtendedProp("categoryColor", "#c3c3c3ff");
                         event.setExtendedProp("popupColor", "#9C9C9C");
                         event.setExtendedProp("release", false);
+                        event.setExtendedProp("StatusCode", "3");
 
                         calendar.render();
                     }
@@ -992,6 +993,7 @@
                     $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').html('<div class="o-eventBall"></div>');
                 }
             },
+            eventOrder: ["StatusCode", "start"],
             // 行事曆資料
             events: dataSource
         });
