--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -520,7 +520,7 @@
 
                 var s = currentConsultSchedule.StartTime + '~' + currentConsultSchedule.EndTime;
 
-                if (d1.getHours < 12) {
+                if (d1.getHours() < 12) {
                     s = '上午 ' + s;
                 }
                 else {
