--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -527,6 +527,7 @@
     const dataSource = @Model.ConsultScheduleForCalendarsHtmlString;
     const dayNamesZh = ['日', '一', '二', '三', '四', '五', '六']
     let calendar;
+    let calendarData = [];
 
     let popoverElement;
     const dateObj = new Date();
@@ -752,17 +753,38 @@
                     c.StatusCode = "3";
                     fjs2.addRecords([c], true);
 
-                    var event = calendar.getEventById(id);
-                    if (event) {
-                        event.setProp("title", "歷史紀錄");
-                        event.setExtendedProp("type", "history");
-                        event.setExtendedProp("categoryColor", "#c3c3c3ff");
-                        event.setExtendedProp("popupColor", "#9C9C9C");
-                        event.setExtendedProp("release", false);
-                        event.setExtendedProp("StatusCode", "3");
+                    // var event = calendar.getEventById(id);
+                    // if (event) {
+                    //     event.setProp("title", "歷史紀錄");
+                    //     event.setExtendedProp("type", "history");
+                    //     event.setExtendedProp("categoryColor", "#c3c3c3ff");
+                    //     event.setExtendedProp("popupColor", "#9C9C9C");
+                    //     event.setExtendedProp("release", false);
+                    //     event.setExtendedProp("StatusCode", "3");
 
-                        calendar.render();
-                    }
+                    //     calendar.render();
+                    // }
+
+                    var d = dataSource.find(d => d.id == id);
+                    d.title = "歷史紀錄";
+                    d.type = "history";
+                    d.categoryColor = "#c3c3c3ff";
+                    d.popupColor = "#9C9C9C";
+                    d.release = false;
+                    d.StatusCode = "3";
+
+                    calendarData = dataSource;
+
+                    var events = calendar.getEvents();
+                    events.forEach((event) => {
+                        event.remove();
+                    });
+
+                    calendarData.forEach((data) => {
+                        calendar.addEvent(data);
+                    });                 
+
+                    calendar.render();
                 }
                 else {
                     if (data.block) {
