--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -874,6 +874,7 @@
                     let data = {
                         title: info.event.title,
                         start: info.event.start,
+						end: info.event.end,
                         ...info.event.extendedProps
                     };
                     if (!$('.c-eventPopup').length) {
