--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -294,6 +294,10 @@
         <div class="c-modal__content">
             <div class="l-info">
                 <div class="l-info__item">
+                    <div class="l-info__title">預約理專</div>
+                    <div class="l-info__val" data-detail="EmployeeName"></div>
+                </div>
+                <div class="l-info__item">
                     <div class="l-info__title">預約日期</div>
                     <div class="l-info__val" data-detail="ScheduleDate"></div>
                 </div>
@@ -696,13 +700,13 @@
             }, 300);
         });
 
-
         function setPopup(id) {
             var consultSchedule = consultSchedules.find((item) => item.ScheduleID == id);
 
             $('[data-detail="EmployeeName"]').text(consultSchedule.EmployeeName);
             $('[data-detail="ScheduleDate"]').text(consultSchedule.ScheduleDateString);
             $('[data-detail="ScheduleTime"]').text(consultSchedule.StartTime + '~' + consultSchedule.EndTime);
+            $('[data-detail="CustomerName"]').text(consultSchedule.CustomerName);
             $('[data-detail="Phone"]').text(consultSchedule.Phone);
             $('[data-detail="Mail"]').text(consultSchedule.Mail);
             $('[data-detail="Subject"]').text(consultSchedule.Subject);
