update: 調整側邊加入比較小工具-加入ETF跟加入基金樣式

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -85,12 +85,12 @@
                 </div>
                 <div class="c-sidebox__actions">
                     <a href="@fundEtfCompareUrl" class="o-btn o-btn--primary o-btn--sm o-btn--flat">開始比較</a>
-                    <div class="l-flex u-flex-gap-ultra u-mt-md">
+                    <div class="l-flex u-flex-gap-xs u-mt-md">
                         <div class="l-flex__item l-flex__item--auto">
-                            <a href="@fundSearchUrl" class="o-prefixLink o-prefixLink--plus" data-addcompare-btn>加入基金</a>
+                            <a href="@fundSearchUrl" class="o-btn o-btn--secondary o-btn--sm o-btn--flat" data-addcompare-btn>加入基金</a>
                         </div>
                         <div class="l-flex__item l-flex__item--auto">
-                            <a href="@etfSearchUrl" class="o-prefixLink o-prefixLink--plus" data-addcompare-btn>加入ETF</a>
+                            <a href="@etfSearchUrl" class="o-btn o-btn--secondary o-btn--sm o-btn--flat" data-addcompare-btn>加入ETF</a>
                         </div>
                     </div>
                 </div>
